# video-analytics

./: .gitignore
color-based-object-detection-live-video/source/: CMakeCache.txt  CMakeLists.txt  Makefile  Read-Me.txt  VideoDetection.cpp  cmake_install.cmake
color-based-object-detection/source/: CMakeCache.txt  CMakeLists.txt  Makefile  ObjectDetectionHSV.cpp  ObjectDetectionRGB.cpp  cmake_install.cmake
color-wheel/source/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  colorWheel.cpp
demo.colorspace/: pom.xml
emotion-recognition-ml/source/: READ ME.txt
emotion-recognition-ml/source/emotion-recognition/EmotionRecognition/: ASMCalculator.cpp  ASMCalculator.hpp  EmotionRecognition  FaceDetector.cpp  contentLoader.sh  dataset-generator.py  datatypes.cpp  svmClassifier.cpp  svmClassifier.h  test.cpp  training_data.csv  training_data_headers.csv  training_data_only.csv
emotion-recognition-ml/source/emotion-recognition/EmotionRecognition.xcodeproj/: project.pbxproj
emotion-recognition-ml/source/emotion-recognition/EmotionRecognition.xcodeproj/project.xcworkspace/xcuserdata/Heman.xcuserdatad/: UserInterfaceState.xcuserstate
emotion-recognition-ml/source/emotion-recognition/EmotionRecognition.xcodeproj/xcuserdata/Heman.xcuserdatad/xcschemes/: EmotionRecognition.xcscheme  xcschememanagement.plist
image-blur/source/: CMakeCache.txt  Makefile  ReadMe.txt  cmake_install.cmake
intrinsic-depth-image-manipulation/source/: CMakeCache.txt  CMakeLists.txt  CameraCalibration.cpp  Makefile  Read-Me.txt  calibration.yml  cmake_install.cmake
(+4 files in other folders)
