cmake_minimum_required(VERSION 2.8)
project( Object-Detection )
find_package( OpenCV )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( ObjectDetectionRGB ObjectDetectionRGB.cpp )
add_executable( ObjectDetectionHSV ObjectDetectionHSV.cpp )
target_link_libraries( ObjectDetectionRGB ${OpenCV_LIBS} )
target_link_libraries( ObjectDetectionHSV ${OpenCV_LIBS} )
